k8s/activity-log-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-log-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activitylogservice
  template:
    metadata:
      labels:
        app: activitylogservice
    spec:
      containers:
      - image: nguyendanielt/activitylogservice:latest
        name: activitylogservice
