k8s/auth-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - image: nguyendanielt/authservice:latest
        name: authservice
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: authservice
