k8s/password-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passwordservice
  template:
    metadata:
      labels:
        app: passwordservice
    spec:
      containers:
      - image: nguyendanielt/passwordservice:latest
        name: passwordservice
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: password-clusterip-svc
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: passwordservice
