k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:16.1
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-pv
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-svc
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
