k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: securelockr.com
    http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: auth-clusterip-svc
            port:
              number: 8080
      - path: /api/password
        pathType: Prefix
        backend:
          service:
            name: password-clusterip-svc
            port:
              number: 8081
